Standardize the steps that need to be modified each time a new domain is added

--- a/templates/front.html
+++ b/templates/front.html
@@ -20,14 +20,18 @@
 			<a href="/"><img class="mb-4" src="/src/image/logo-search.jpg" alt="" width="390" height="140.4"></a>
 			<br />
             <div style="display: inline;">
-                <!-- <a id="visualizationLink" class="btn btn-front" href="search/?field=visualization" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043;">visualization</a> -->
-				<a id="visualizationLink" class="custom-button" href="search?field=visualization" style="margin-right: 30px;">
-                    <i class="fas fa-eye icon"></i>
-                    visualization
-                </a>
-                <a id="NLPLink" class="custom-button" href="search?field=acl" style="margin-left: 30px;">
+				<a id="NLPLink" class="custom-button" href="search?field=acl" style="margin-left: 30px;">
                     <i class="fa-solid fa-pencil icon"></i>
                     NLP
+                </a>
+                <!-- <a id="visualizationLink" class="btn btn-front" href="search/?field=visualization" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043;">visualization</a> -->
+				<a id="visualizationLink" class="custom-button" href="search?field=visualization">
+                    <i class="fas fa-eye icon"></i>
+                    Visualization
+                </a>
+				<a id="databaseLink" class="custom-button" href="search?field=database">
+                    <i class="fa-solid fa-database"></i>
+                    Database
                 </a>
 			</div>
 			<br />
