update the framework of color and thickness

--- a/templates/front.html
+++ b/templates/front.html
@@ -31,7 +31,7 @@
                 </a>
 				<a id="databaseLink" class="custom-button" href="search?field=database">
                     <i class="fa-solid fa-database"></i>
-                    Database
+                    Database/Data Science
                 </a>
 			</div>
 			<br />
